--- a/index.html
+++ b/index.html
@@ -2,10 +2,28 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WindBreakerTR</title>
+
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+  </style>
 </head>
 <body>
-  <h1>Site ÇALIŞIYOR</h1>
-  <p>Eğer bunu görüyorsan HTML doğru.</p>
+
+  <img src="foto.jpeg" alt="WindBreakerTR">
+
 </body>
 </html>
